Added in common navbars and made some modifications for cleaner look

--- a/guitar.css
+++ b/guitar.css
@@ -9,15 +9,15 @@ body {
 /* Style the header */
 .header {
   grid-area: header;
-  background-color: #f1f1f1;
-  padding: 10px;
+  background-color: white;
   text-align: center;
   font-size: 20px;
+  padding:20px;
 }
 
 .group {
   grid-area: group;
-  background-color: #f1f1f1;
+  background-color: white;
   padding: 10px;
   text-align: left;
   font-size: 15px;
@@ -88,6 +88,10 @@ body {
   padding: 10px;
 }
 
+.group {
+  padding: 10px;
+}
+
 /* Style the left column */
 /*.left {
   grid-area: left;
@@ -100,6 +104,10 @@ body {
   background-color:white;
 }
 
+.navbar {
+  margin-bottom: 0;
+}
+
 /* Style the right column */
 /*.right {
   grid-area: right;
@@ -109,7 +117,7 @@ body {
 /* Style the footer */
 .footer {
   grid-area: footer;
-  background-color: #f1f1f1;
+  background-color: white;
   padding: 10px;
   text-align: center;
 }
