skill page changes

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,11 @@ a {
   margin-bottom: 0;
 }
 
+.searchText{
+    width: 400px;
+    height: 30px;
+}
+
 .banner {
     padding-left:10%;
     padding-right:10%;
