--- a/guitar.css
+++ b/guitar.css
@@ -6,63 +6,53 @@ body {
   font-family: sans-serif;
 }
 
+h1.title-layouts {
+    font-size: 3em;
+    color: #fff;
+    text-align: center;
+    text-transform: capitalize;
+    padding-bottom: 1em;
+    font-family: 'Marcellus SC', serif;
+    padding: 1em 0;
+}
+
+h1.title-layouts span {
+    margin-right: 15px;
+    color: #ffa200;
+}
+
+h1.card-header {
+    margin-right: 15px;
+    color: white;
+    background:white;
+}
+
 /* Style the header */
 .header {
   grid-area: header;
-  background-color: white;
+  background-color: #0f3370;
   text-align: center;
-  font-size: 20px;
-  padding:20px;
+  font-size: 16px;
+  padding-right:10%;
+  padding-left:10%;
 }
 
-.group {
-  grid-area: group;
-  background-color: white;
-  padding: 10px;
-  text-align: left;
-  font-size: 15px;
+.thumbnail {
+  padding-left:20px;
+  padding-right:20px;
 }
 
-.flex-container {
-  display: flex;
-  background-color: DodgerBlue;
+.skill_desc {
+  text-align:left;
+  color:white;
 }
 
-.flex-container>div {
-  background: radial-gradient(circle,white,red);
-  border:2px solid white;
-  margin: 10px;
-  padding:30px;
-  border-radius: 50%;
-  display:table;
-  position:relative;
+.skill_desc h4 {
+  display:inline-block;
 }
 
-.flex-container> grp{
-  background: radial-gradient(circle,white,DodgerBlue);
-  border:2px solid white;
-  margin: 10px;
-  padding:30px;
-  display:table;
-}
-
-.flex-container p{
-  font-size: 20px;
-  display:table-cell;
-  text-align:center;
-  vertical-align:middle;
-  width: 70px;
-  height: 70px;
-}
-
-.link-spanner{
-  border-radius: 50%;
-  position:absolute;
-  width:100%;
-  height:100%;
-  top:0;
-  left: 0;
-  z-index: 1;
+.skill_desc button {
+  float:right;
 }
 
 .right {
@@ -78,17 +68,12 @@ body {
   display: grid;
   grid-template-areas:
   'header header header header header header'
-  'group group group group group group'
   'middle middle middle middle middle middle'
   'footer footer footer footer footer footer';
   /* grid-column-gap: 10px; - if you want gap between the columns */
 }
 
 .middle {
-  padding: 10px;
-}
-
-.group {
   padding: 10px;
 }
 
@@ -101,7 +86,9 @@ body {
 /* Style the middle column */
 .middle {
   grid-area: middle;
-  background-color:white;
+  background-color:#0f3370;
+  padding-left:10%;
+  padding-right:10%;
 }
 
 .navbar {
@@ -122,12 +109,47 @@ body {
   text-align: center;
 }
 
+.container{
+    margin-top:20px;
+}
+.image-preview-input {
+    position: relative;
+    overflow: hidden;
+    margin: 0px;
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+}
+.image-preview-input input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.image-preview-input-title {
+    margin-left:2px;
+}
+
+.image-preview-clear {
+  display:none;
+}
+
+.gallery
+{
+    display: inline-block;
+    margin-top: 20px;
+}
+
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
   .grid-container  {
     grid-template-areas:
     'header header header header header header'
-    'group group group group group group'
     /*'left left left left left left'*/
     'middle middle middle middle middle middle'
     /*'right right right right right right'*/
