--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ section {
 }
 
 
+
 ol,
 ul {
     list-style: none;
@@ -132,6 +133,10 @@ table {
 
 a {
     text-decoration: none;
+}
+
+html{
+	font-family: sans-serif;
 }
 
 .new-btn {
