--- a/userpage.css
+++ b/userpage.css
@@ -1,3 +1,7 @@
+body {
+	background-color:#0f3370;;
+}
+
 .media-body{
 	margin-left: 20px;
 }
@@ -27,7 +31,6 @@
 	margin: 0 auto;
 }
 
-
 .posts-menu{
 	margin-top: 20px;
 	display: block;
@@ -39,4 +42,58 @@
 
 .media-heading{
 	font-weight: bold;
+}
+
+.middle {
+  grid-area: middle;
+  background-color:#0f3370;
+  padding-left:10%;
+  padding-right:10%;
+  min-height:645px;
+}
+
+.footer {
+  background-color: #0f3370;
+  text-align: center;
+  color:white;
+  padding-top:30px;
+  padding-bottom:20px;
+}
+
+.navbar {
+  margin-bottom: 0px;
+}
+
+.header {
+  background-color: #0f3370;
+  text-align: center;
+  font-size: 16px;
+  padding-right:10%;
+  padding-left:10%;
+}
+
+.img-thumbnail {
+  padding:20px;
+}
+
+h1.title-layouts {
+    font-size: 3em;
+    color: #fff;
+    text-align: center;
+    text-transform: capitalize;
+    padding-bottom: 1em;
+    font-family: 'Marcellus SC', serif;
+    padding: 1em 0;
+}
+
+h1.title-layouts span {
+    margin-right: 15px;
+    color: #ffa200;
+}
+
+.list-group {
+	padding-top:10px;
+}
+.badge {
+	background-color:#007bff;;
 }
