--- a/progress.css
+++ b/progress.css
@@ -133,6 +133,18 @@ body {
   padding:20px;
 }
 
+.container{
+    max-height:50px;
+    overflow-y:auto;
+    overflow-x:hidden;
+    width:inherit;
+}
+
+.thumbnail {
+	margin-left:20px;
+	margin-right:20px;
+}
+
 h1.title-layouts {
     font-size: 3em;
     color: #fff;
