You can now comment live

--- a/progress.css
+++ b/progress.css
@@ -66,6 +66,14 @@ body {
 	margin: 20px auto;
 }
 
+.comment-update-form1{
+  margin: 20px auto;
+}
+
+.comment-update-form2{
+  margin: 20px auto;
+}
+
 .goal{
 	margin: 0 auto;
 	line-height: 1.2;
