changed title font to sans-serif

--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ h1.title-layouts {
     text-align: center;
     text-transform: capitalize;
     padding-bottom: 1em;
-    font-family: 'Marcellus SC', serif;
+    font-family: 'Marcellus SC', sans-serif;
     padding: 1em 0;
 }
 
